--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
+    "mongoose": "^8.2.3",
     "multer": "^1.4.5-lts.1",
     "winston": "^3.11.0"
   }
